trunk/src/ModelGenerator/LhaParser/Lha-parser.output
Terminaux inutilisés dans la grammaire

   LhaName


Grammaire

    0 $accept: LHA "end of file"

    1 LHA: declarations InitFinal definitions
    2    | HaslExps

    3 declarations: Sizes Constants Lists HaslExps
    4             | Sizes Lists HaslExps

    5 IntMarkingFormula: ival
    6                  | str
    7                  | str LSB ColorClassList RSB
    8                  | LB IntMarkingFormula RB
    9                  | MINUS IntMarkingFormula
   10                  | IntMarkingFormula PLUS IntMarkingFormula
   11                  | IntMarkingFormula MINUS IntMarkingFormula
   12                  | IntMarkingFormula MUL IntMarkingFormula
   13                  | IntMarkingFormula POWER IntMarkingFormula
   14                  | FLOOR LB IntMarkingFormula RB
   15                  | FLOOR LB IntMarkingFormula DIV IntMarkingFormula RB
   16                  | MIN LB IntMarkingFormula COMMA IntMarkingFormula RB
   17                  | MAX LB IntMarkingFormula COMMA IntMarkingFormula RB

   18 RealMarkingFormula: rval
   19                   | ival
   20                   | str
   21                   | str LSB ColorClassList RSB
   22                   | LB RealMarkingFormula RB
   23                   | MINUS RealMarkingFormula
   24                   | RealMarkingFormula DIV RealMarkingFormula
   25                   | RealMarkingFormula PLUS RealMarkingFormula
   26                   | RealMarkingFormula MINUS RealMarkingFormula
   27                   | RealMarkingFormula MUL RealMarkingFormula
   28                   | RealMarkingFormula POWER RealMarkingFormula
   29                   | FLOOR LB RealMarkingFormula RB
   30                   | MIN LB RealMarkingFormula COMMA RealMarkingFormula RB
   31                   | MAX LB RealMarkingFormula COMMA RealMarkingFormula RB

   32 RealVarMarkingFormula: rval
   33                      | ival
   34                      | str
   35                      | str LSB ColorClassList RSB
   36                      | LB RealVarMarkingFormula RB
   37                      | MINUS RealVarMarkingFormula
   38                      | RealVarMarkingFormula DIV RealVarMarkingFormula
   39                      | RealVarMarkingFormula PLUS RealVarMarkingFormula
   40                      | RealVarMarkingFormula MINUS RealVarMarkingFormula
   41                      | RealVarMarkingFormula MUL RealVarMarkingFormula
   42                      | RealVarMarkingFormula POWER RealVarMarkingFormula
   43                      | FLOOR LB RealVarMarkingFormula RB
   44                      | MIN LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB
   45                      | MAX LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB

   46 ColorClassList: str
   47               | str COMMA ColorClassList

   48 Sizes: NbLocations NbVariables
   49      | NbVariables NbLocations

   50 Constants: Constant
   51          | Constant Constants

   52 Constant: Const INT str EQ IntMarkingFormula SEMICOLON
   53         | Const DOUBLE str EQ RealMarkingFormula SEMICOLON

   54 NbVariables: NbVar EQ ival SEMICOLON

   55 NbLocations: NbLoc EQ ival SEMICOLON

   56 Lists: VariablesList LocationsList
   57      | LocationsList VariablesList

   58 VariablesList: VList EQ '{' VLabels '}' SEMICOLON

   59 VLabels: str
   60        | DISC str
   61        | VLabels COMMA str
   62        | VLabels COMMA DISC str

   63 LocationsList: LList EQ '{' LLabels '}' SEMICOLON

   64 LLabels: str
   65        | LLabels COMMA str

   66 InitFinal: init final
   67          | final init

   68 init: Iloc EQ '{' iLLabels '}' SEMICOLON

   69 iLLabels: str
   70         | iLLabels COMMA str

   71 final: Floc EQ '{' fLLabels '}' SEMICOLON

   72 fLLabels: str
   73         | fLLabels COMMA str

   74 definitions: LocationsDef EdgesDef
   75            | EdgesDef LocationsDef

   76 LocationsDef: locations EQ '{' LOCATIONS '}' SEMICOLON

   77 LOCATIONS: LOCATION
   78          | LOCATIONS LOCATION

   79 LOCATION: LB str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   80         | LB str COMMA LogExpr RB SEMICOLON

   81 FLOWS: FLOW
   82      | FLOWS COMMA FLOW

   83 FLOW: str COLON RealMarkingFormula

   84 LogExpr: TRUE
   85        | FALSE
   86        | CompExpr
   87        | LogExpr AND LogExpr
   88        | LogExpr OR LogExpr
   89        | LB LogExpr RB
   90        | NOT LogExpr

   91 CompExpr: RealMarkingFormula EQ RealMarkingFormula
   92         | RealMarkingFormula LEQ RealMarkingFormula
   93         | RealMarkingFormula GEQ RealMarkingFormula
   94         | RealMarkingFormula LL RealMarkingFormula
   95         | RealMarkingFormula GG RealMarkingFormula

   96 EdgesDef: edges EQ '{' EDGES '}' SEMICOLON

   97 EDGES: EDGE
   98      | EDGE EDGES

   99 EDGE: LB LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

  100 ACTIONS: SHARP
  101        | ALL
  102        | ALL BackSlash SetOfActions
  103        | SetOfActions

  104 SetOfActions: '{' Actions '}'

  105 Actions: str
  106        | Actions COMMA str

  107 CONSTRAINTS: CONSTRAINT
  108            | CONSTRAINT AND CONSTRAINTS
  109            | SHARP

  110 CONSTRAINT: LinearExp EQ RealMarkingFormula
  111           | LinearExp LEQ RealMarkingFormula
  112           | LinearExp GEQ RealMarkingFormula

  113 LinearExp: term
  114          | LinearExp MINUS term
  115          | LinearExp PLUS term

  116 term: str
  117     | LB RealMarkingFormula RB MUL str
  118     | ival MUL str
  119     | rval MUL str
  120     | str MUL str
  121     | MINUS str
  122     | MINUS LB RealMarkingFormula RB MUL str
  123     | MINUS ival MUL str
  124     | MINUS rval MUL str
  125     | MINUS str MUL str

  126 UPDATES: '{' Updates '}'
  127        | SHARP

  128 Updates: Update
  129        | Updates COMMA Update

  130 Update: str EQ RealVarMarkingFormula

  131 HaslExps: HaslExp
  132         | HaslExp HaslExps

  133 HaslExp: str EQ TopHaslExp SEMICOLON
  134        | TopHaslExp SEMICOLON

  135 rorival: rval
  136        | ival
  137        | str

  138 TopHaslExp: AVG LB AlgExpr RB
  139           | PROB
  140           | SPRT LB rval COMMA rval RB
  141           | PDF LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB
  142           | CDF LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB
  143           | VAR LB AlgExpr RB
  144           | LB TopHaslExp RB
  145           | TopHaslExp PLUS TopHaslExp
  146           | TopHaslExp MINUS TopHaslExp
  147           | TopHaslExp MUL TopHaslExp
  148           | TopHaslExp DIV TopHaslExp
  149           | ival
  150           | rval

  151 AlgExpr: LhaFunc
  152        | MIN LB AlgExpr COMMA AlgExpr RB
  153        | MAX LB AlgExpr COMMA AlgExpr RB
  154        | MINUS AlgExpr
  155        | FLOOR LB AlgExpr RB
  156        | LB AlgExpr RB
  157        | AlgExpr POWER AlgExpr
  158        | AlgExpr PLUS AlgExpr
  159        | AlgExpr MINUS AlgExpr
  160        | AlgExpr MUL AlgExpr
  161        | AlgExpr DIV AlgExpr

  162 LhaFunc: LAST LB LinForm RB
  163        | LhaMIN LB LinForm RB
  164        | LhaMAX LB LinForm RB
  165        | INTEGRAL LB LinForm RB
  166        | MEAN LB LinForm RB

  167 LinForm: VarTerm
  168        | LinForm MINUS VarTerm
  169        | LinForm PLUS VarTerm

  170 VarTerm: str
  171        | LB RealMarkingFormula RB MUL str
  172        | ival MUL str
  173        | rval MUL str
  174        | ival
  175        | rval
  176        | str MUL str
  177        | MINUS str
  178        | MINUS LB RealMarkingFormula RB MUL str
  179        | MINUS ival MUL str
  180        | MINUS rval MUL str
  181        | MINUS str MUL str


Terminaux, suivis des règles où ils apparaissent

"end of file" (0) 0
'{' (123) 58 63 68 71 76 96 104 126
'}' (125) 58 63 68 71 76 96 104 126
error (256)
str (258) 6 7 20 21 34 35 46 47 52 53 59 60 61 62 64 65 69 70 72 73
    79 80 83 99 105 106 116 117 118 119 120 121 122 123 124 125 130
    133 137 170 171 172 173 176 177 178 179 180 181
rval (259) 18 32 119 124 135 140 150 173 175 180
ival (260) 5 19 33 54 55 118 123 136 149 172 174 179
SEMICOLON (261) 52 53 54 55 58 63 68 71 76 79 80 96 99 133 134
COLON (262) 83
COMMA (263) 16 17 30 31 44 45 47 61 62 65 70 73 79 80 82 99 106 129
    140 141 142 152 153
LB (264) 8 14 15 16 17 22 29 30 31 36 43 44 45 79 80 89 99 117 122
    138 140 141 142 143 144 152 153 155 156 162 163 164 165 166 171
    178
RB (265) 8 14 15 16 17 22 29 30 31 36 43 44 45 79 80 89 99 117 122
    138 140 141 142 143 144 152 153 155 156 162 163 164 165 166 171
    178
LSB (266) 7 21 35
RSB (267) 7 21 35
SHARP (268) 100 109 127
ALL (269) 101 102
BackSlash (270) 102
EQ (271) 52 53 54 55 58 63 68 71 76 91 96 110 130 133
GEQ (272) 93 112
LEQ (273) 92 111
LL (274) 94
GG (275) 95
AND (276) 87 108
OR (277) 88
NOT (278) 90
TRUE (279) 84
FALSE (280) 85
DOUBLE (281) 53
INT (282) 52
DIV (283) 15 24 38 148 161
MUL (284) 12 27 41 117 118 119 120 122 123 124 125 147 160 171 172
    173 176 178 179 180 181
PLUS (285) 10 25 39 115 145 158 169
MINUS (286) 9 11 23 26 37 40 114 121 122 123 124 125 146 154 159 168
    177 178 179 180 181
POWER (287) 13 28 42 157
FLOOR (288) 14 15 29 43 155
MIN (289) 16 30 44 152
MAX (290) 17 31 45 153
LhaMIN (291) 163
LhaMAX (292) 164
AVG (293) 138
VAR (294) 143
PROB (295) 139
SPRT (296) 140
LAST (297) 162
INTEGRAL (298) 165
MEAN (299) 166
DISC (300) 60 62
LhaName (301)
Const (302) 52 53
NbLoc (303) 55
NbVar (304) 54
VList (305) 58
LList (306) 63
Iloc (307) 68
Floc (308) 71
locations (309) 76
edges (310) 96
PDF (311) 141
CDF (312) 142
NEG (313)


Non-terminaux, suivis des règles où ils apparaissent

$accept (61)
    à gauche: 0
LHA (62)
    à gauche: 1 2, à droite: 0
declarations (63)
    à gauche: 3 4, à droite: 1
IntMarkingFormula (64)
    à gauche: 5 6 7 8 9 10 11 12 13 14 15 16 17, à droite: 8 9 10
    11 12 13 14 15 16 17 52
RealMarkingFormula (65)
    à gauche: 18 19 20 21 22 23 24 25 26 27 28 29 30 31, à droite:
    22 23 24 25 26 27 28 29 30 31 53 83 91 92 93 94 95 110 111 112
    117 122 171 178
RealVarMarkingFormula (66)
    à gauche: 32 33 34 35 36 37 38 39 40 41 42 43 44 45, à droite:
    36 37 38 39 40 41 42 43 44 45 130
ColorClassList (67)
    à gauche: 46 47, à droite: 7 21 35 47
Sizes (68)
    à gauche: 48 49, à droite: 3 4
Constants (69)
    à gauche: 50 51, à droite: 3 51
Constant (70)
    à gauche: 52 53, à droite: 50 51
NbVariables (71)
    à gauche: 54, à droite: 48 49
NbLocations (72)
    à gauche: 55, à droite: 48 49
Lists (73)
    à gauche: 56 57, à droite: 3 4
VariablesList (74)
    à gauche: 58, à droite: 56 57
VLabels (75)
    à gauche: 59 60 61 62, à droite: 58 61 62
LocationsList (76)
    à gauche: 63, à droite: 56 57
LLabels (77)
    à gauche: 64 65, à droite: 63 65
InitFinal (78)
    à gauche: 66 67, à droite: 1
init (79)
    à gauche: 68, à droite: 66 67
iLLabels (80)
    à gauche: 69 70, à droite: 68 70
final (81)
    à gauche: 71, à droite: 66 67
fLLabels (82)
    à gauche: 72 73, à droite: 71 73
definitions (83)
    à gauche: 74 75, à droite: 1
LocationsDef (84)
    à gauche: 76, à droite: 74 75
LOCATIONS (85)
    à gauche: 77 78, à droite: 76 78
LOCATION (86)
    à gauche: 79 80, à droite: 77 78
FLOWS (87)
    à gauche: 81 82, à droite: 79 82
FLOW (88)
    à gauche: 83, à droite: 81 82
LogExpr (89)
    à gauche: 84 85 86 87 88 89 90, à droite: 79 80 87 88 89 90
CompExpr (90)
    à gauche: 91 92 93 94 95, à droite: 86
EdgesDef (91)
    à gauche: 96, à droite: 74 75
EDGES (92)
    à gauche: 97 98, à droite: 96 98
EDGE (93)
    à gauche: 99, à droite: 97 98
ACTIONS (94)
    à gauche: 100 101 102 103, à droite: 99
SetOfActions (95)
    à gauche: 104, à droite: 102 103
Actions (96)
    à gauche: 105 106, à droite: 104 106
CONSTRAINTS (97)
    à gauche: 107 108 109, à droite: 99 108
CONSTRAINT (98)
    à gauche: 110 111 112, à droite: 107 108
LinearExp (99)
    à gauche: 113 114 115, à droite: 110 111 112 114 115
term (100)
    à gauche: 116 117 118 119 120 121 122 123 124 125, à droite:
    113 114 115
UPDATES (101)
    à gauche: 126 127, à droite: 99
Updates (102)
    à gauche: 128 129, à droite: 126 129
Update (103)
    à gauche: 130, à droite: 128 129
HaslExps (104)
    à gauche: 131 132, à droite: 2 3 4 132
HaslExp (105)
    à gauche: 133 134, à droite: 131 132
rorival (106)
    à gauche: 135 136 137, à droite: 141 142
TopHaslExp (107)
    à gauche: 138 139 140 141 142 143 144 145 146 147 148 149 150,
    à droite: 133 134 144 145 146 147 148
AlgExpr (108)
    à gauche: 151 152 153 154 155 156 157 158 159 160 161, à droite:
    138 141 142 143 152 153 154 155 156 157 158 159 160 161
LhaFunc (109)
    à gauche: 162 163 164 165 166, à droite: 151
LinForm (110)
    à gauche: 167 168 169, à droite: 162 163 164 165 166 168 169
VarTerm (111)
    à gauche: 170 171 172 173 174 175 176 177 178 179 180 181, à droite:
    167 168 169


État 0

    0 $accept: . LHA "end of file"

    str    décalage et aller à l'état 1
    rval   décalage et aller à l'état 2
    ival   décalage et aller à l'état 3
    LB     décalage et aller à l'état 4
    AVG    décalage et aller à l'état 5
    VAR    décalage et aller à l'état 6
    PROB   décalage et aller à l'état 7
    SPRT   décalage et aller à l'état 8
    NbLoc  décalage et aller à l'état 9
    NbVar  décalage et aller à l'état 10
    PDF    décalage et aller à l'état 11
    CDF    décalage et aller à l'état 12

    LHA           aller à l'état 13
    declarations  aller à l'état 14
    Sizes         aller à l'état 15
    NbVariables   aller à l'état 16
    NbLocations   aller à l'état 17
    HaslExps      aller à l'état 18
    HaslExp       aller à l'état 19
    TopHaslExp    aller à l'état 20


État 1

  133 HaslExp: str . EQ TopHaslExp SEMICOLON

    EQ  décalage et aller à l'état 21


État 2

  150 TopHaslExp: rval .

    $défaut  réduction par utilisation de la règle 150 (TopHaslExp)


État 3

  149 TopHaslExp: ival .

    $défaut  réduction par utilisation de la règle 149 (TopHaslExp)


État 4

  144 TopHaslExp: LB . TopHaslExp RB

    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    TopHaslExp  aller à l'état 22


État 5

  138 TopHaslExp: AVG . LB AlgExpr RB

    LB  décalage et aller à l'état 23


État 6

  143 TopHaslExp: VAR . LB AlgExpr RB

    LB  décalage et aller à l'état 24


État 7

  139 TopHaslExp: PROB .

    $défaut  réduction par utilisation de la règle 139 (TopHaslExp)


État 8

  140 TopHaslExp: SPRT . LB rval COMMA rval RB

    LB  décalage et aller à l'état 25


État 9

   55 NbLocations: NbLoc . EQ ival SEMICOLON

    EQ  décalage et aller à l'état 26


État 10

   54 NbVariables: NbVar . EQ ival SEMICOLON

    EQ  décalage et aller à l'état 27


État 11

  141 TopHaslExp: PDF . LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB  décalage et aller à l'état 28


État 12

  142 TopHaslExp: CDF . LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB  décalage et aller à l'état 29


État 13

    0 $accept: LHA . "end of file"

    "end of file"  décalage et aller à l'état 30


État 14

    1 LHA: declarations . InitFinal definitions

    Iloc  décalage et aller à l'état 31
    Floc  décalage et aller à l'état 32

    InitFinal  aller à l'état 33
    init       aller à l'état 34
    final      aller à l'état 35


État 15

    3 declarations: Sizes . Constants Lists HaslExps
    4             | Sizes . Lists HaslExps

    Const  décalage et aller à l'état 36
    VList  décalage et aller à l'état 37
    LList  décalage et aller à l'état 38

    Constants      aller à l'état 39
    Constant       aller à l'état 40
    Lists          aller à l'état 41
    VariablesList  aller à l'état 42
    LocationsList  aller à l'état 43


État 16

   49 Sizes: NbVariables . NbLocations

    NbLoc  décalage et aller à l'état 9

    NbLocations  aller à l'état 44


État 17

   48 Sizes: NbLocations . NbVariables

    NbVar  décalage et aller à l'état 10

    NbVariables  aller à l'état 45


État 18

    2 LHA: HaslExps .

    $défaut  réduction par utilisation de la règle 2 (LHA)


État 19

  131 HaslExps: HaslExp .
  132         | HaslExp . HaslExps

    str   décalage et aller à l'état 1
    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 131 (HaslExps)

    HaslExps    aller à l'état 46
    HaslExp     aller à l'état 19
    TopHaslExp  aller à l'état 20


État 20

  134 HaslExp: TopHaslExp . SEMICOLON
  145 TopHaslExp: TopHaslExp . PLUS TopHaslExp
  146           | TopHaslExp . MINUS TopHaslExp
  147           | TopHaslExp . MUL TopHaslExp
  148           | TopHaslExp . DIV TopHaslExp

    SEMICOLON  décalage et aller à l'état 47
    DIV        décalage et aller à l'état 48
    MUL        décalage et aller à l'état 49
    PLUS       décalage et aller à l'état 50
    MINUS      décalage et aller à l'état 51


État 21

  133 HaslExp: str EQ . TopHaslExp SEMICOLON

    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    TopHaslExp  aller à l'état 52


État 22

  144 TopHaslExp: LB TopHaslExp . RB
  145           | TopHaslExp . PLUS TopHaslExp
  146           | TopHaslExp . MINUS TopHaslExp
  147           | TopHaslExp . MUL TopHaslExp
  148           | TopHaslExp . DIV TopHaslExp

    RB     décalage et aller à l'état 53
    DIV    décalage et aller à l'état 48
    MUL    décalage et aller à l'état 49
    PLUS   décalage et aller à l'état 50
    MINUS  décalage et aller à l'état 51


État 23

  138 TopHaslExp: AVG LB . AlgExpr RB

    LB        décalage et aller à l'état 54
    MINUS     décalage et aller à l'état 55
    FLOOR     décalage et aller à l'état 56
    MIN       décalage et aller à l'état 57
    MAX       décalage et aller à l'état 58
    LhaMIN    décalage et aller à l'état 59
    LhaMAX    décalage et aller à l'état 60
    LAST      décalage et aller à l'état 61
    INTEGRAL  décalage et aller à l'état 62
    MEAN      décalage et aller à l'état 63

    AlgExpr  aller à l'état 64
    LhaFunc  aller à l'état 65


État 24

  143 TopHaslExp: VAR LB . AlgExpr RB

    LB        décalage et aller à l'état 54
    MINUS     décalage et aller à l'état 55
    FLOOR     décalage et aller à l'état 56
    MIN       décalage et aller à l'état 57
    MAX       décalage et aller à l'état 58
    LhaMIN    décalage et aller à l'état 59
    LhaMAX    décalage et aller à l'état 60
    LAST      décalage et aller à l'état 61
    INTEGRAL  décalage et aller à l'état 62
    MEAN      décalage et aller à l'état 63

    AlgExpr  aller à l'état 66
    LhaFunc  aller à l'état 65


État 25

  140 TopHaslExp: SPRT LB . rval COMMA rval RB

    rval  décalage et aller à l'état 67


État 26

   55 NbLocations: NbLoc EQ . ival SEMICOLON

    ival  décalage et aller à l'état 68


État 27

   54 NbVariables: NbVar EQ . ival SEMICOLON

    ival  décalage et aller à l'état 69


État 28

  141 TopHaslExp: PDF LB . AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB        décalage et aller à l'état 54
    MINUS     décalage et aller à l'état 55
    FLOOR     décalage et aller à l'état 56
    MIN       décalage et aller à l'état 57
    MAX       décalage et aller à l'état 58
    LhaMIN    décalage et aller à l'état 59
    LhaMAX    décalage et aller à l'état 60
    LAST      décalage et aller à l'état 61
    INTEGRAL  décalage et aller à l'état 62
    MEAN      décalage et aller à l'état 63

    AlgExpr  aller à l'état 70
    LhaFunc  aller à l'état 65


État 29

  142 TopHaslExp: CDF LB . AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB        décalage et aller à l'état 54
    MINUS     décalage et aller à l'état 55
    FLOOR     décalage et aller à l'état 56
    MIN       décalage et aller à l'état 57
    MAX       décalage et aller à l'état 58
    LhaMIN    décalage et aller à l'état 59
    LhaMAX    décalage et aller à l'état 60
    LAST      décalage et aller à l'état 61
    INTEGRAL  décalage et aller à l'état 62
    MEAN      décalage et aller à l'état 63

    AlgExpr  aller à l'état 71
    LhaFunc  aller à l'état 65


État 30

    0 $accept: LHA "end of file" .

    $défaut  accepter


État 31

   68 init: Iloc . EQ '{' iLLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 72


État 32

   71 final: Floc . EQ '{' fLLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 73


État 33

    1 LHA: declarations InitFinal . definitions

    locations  décalage et aller à l'état 74
    edges      décalage et aller à l'état 75

    definitions   aller à l'état 76
    LocationsDef  aller à l'état 77
    EdgesDef      aller à l'état 78


État 34

   66 InitFinal: init . final

    Floc  décalage et aller à l'état 32

    final  aller à l'état 79


État 35

   67 InitFinal: final . init

    Iloc  décalage et aller à l'état 31

    init  aller à l'état 80


État 36

   52 Constant: Const . INT str EQ IntMarkingFormula SEMICOLON
   53         | Const . DOUBLE str EQ RealMarkingFormula SEMICOLON

    DOUBLE  décalage et aller à l'état 81
    INT     décalage et aller à l'état 82


État 37

   58 VariablesList: VList . EQ '{' VLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 83


État 38

   63 LocationsList: LList . EQ '{' LLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 84


État 39

    3 declarations: Sizes Constants . Lists HaslExps

    VList  décalage et aller à l'état 37
    LList  décalage et aller à l'état 38

    Lists          aller à l'état 85
    VariablesList  aller à l'état 42
    LocationsList  aller à l'état 43


État 40

   50 Constants: Constant .
   51          | Constant . Constants

    Const  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 50 (Constants)

    Constants  aller à l'état 86
    Constant   aller à l'état 40


État 41

    4 declarations: Sizes Lists . HaslExps

    str   décalage et aller à l'état 1
    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    HaslExps    aller à l'état 87
    HaslExp     aller à l'état 19
    TopHaslExp  aller à l'état 20


État 42

   56 Lists: VariablesList . LocationsList

    LList  décalage et aller à l'état 38

    LocationsList  aller à l'état 88


État 43

   57 Lists: LocationsList . VariablesList

    VList  décalage et aller à l'état 37

    VariablesList  aller à l'état 89


État 44

   49 Sizes: NbVariables NbLocations .

    $défaut  réduction par utilisation de la règle 49 (Sizes)


État 45

   48 Sizes: NbLocations NbVariables .

    $défaut  réduction par utilisation de la règle 48 (Sizes)


État 46

  132 HaslExps: HaslExp HaslExps .

    $défaut  réduction par utilisation de la règle 132 (HaslExps)


État 47

  134 HaslExp: TopHaslExp SEMICOLON .

    $défaut  réduction par utilisation de la règle 134 (HaslExp)


État 48

  148 TopHaslExp: TopHaslExp DIV . TopHaslExp

    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    TopHaslExp  aller à l'état 90


État 49

  147 TopHaslExp: TopHaslExp MUL . TopHaslExp

    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    TopHaslExp  aller à l'état 91


État 50

  145 TopHaslExp: TopHaslExp PLUS . TopHaslExp

    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    TopHaslExp  aller à l'état 92


État 51

  146 TopHaslExp: TopHaslExp MINUS . TopHaslExp

    rval  décalage et aller à l'état 2
    ival  décalage et aller à l'état 3
    LB    décalage et aller à l'état 4
    AVG   décalage et aller à l'état 5
    VAR   décalage et aller à l'état 6
    PROB  décalage et aller à l'état 7
    SPRT  décalage et aller à l'état 8
    PDF   décalage et aller à l'état 11
    CDF   décalage et aller à l'état 12

    TopHaslExp  aller à l'état 93


État 52

  133 HaslExp: str EQ TopHaslExp . SEMICOLON
  145 TopHaslExp: TopHaslExp . PLUS TopHaslExp
  146           | TopHaslExp . MINUS TopHaslExp
  147           | TopHaslExp . MUL TopHaslExp
  148           | TopHaslExp . DIV TopHaslExp

    SEMICOLON  décalage et aller à l'état 94
    DIV        décalage et aller à l'état 48
    MUL        décalage et aller à l'état 49
    PLUS       décalage et aller à l'état 50
    MINUS      décalage et aller à l'état 51


État 53

  144 TopHaslExp: LB TopHaslExp RB .

    $défaut  réduction par utilisation de la règle 144 (TopHaslExp)


État 54

  156 AlgExpr: LB . AlgExpr RB

    LB        décalage et aller à l'état 54
    MINUS     décalage et aller à l'état 55
    FLOOR     décalage et aller à l'état 56
    MIN       décalage et aller à l'état 57
    MAX       décalage et aller à l'état 58
    LhaMIN    décalage et aller à l'état 59
    LhaMAX    décalage et aller à l'état 60
    LAST      décalage et aller à l'état 61
    INTEGRAL  décalage et aller à l'état 62
    MEAN      décalage et aller à l'état 63

    AlgExpr  aller à l'état 95
    LhaFunc  aller à l'état 65


État 55

  154 AlgExpr: MINUS . AlgExpr

    LB        décalage et aller à l'état 54
    MINUS     décalage et aller à l'état 55
    FLOOR     décalage et aller à l'état 56
    MIN       décalage et aller à l'état 57
    MAX       décalage et aller à l'état 58
    LhaMIN    décalage et aller à l'état 59
    LhaMAX    décalage et aller à l'état 60
    LAST      décalage et aller à l'état 61
    INTEGRAL  décalage et aller à l'état 62
    MEAN      décalage et aller à l'état 63

    AlgExpr  aller à l'état 96
    LhaFunc  aller à l'état 65


État 56

  155 AlgExpr: FLOOR . LB AlgExpr RB

    LB  décalage et aller à l'état 97


État 57

  152 AlgExpr: MIN . LB AlgExpr COMMA AlgExpr RB

    LB  décalage et aller à l'état 98


État 58

  153 AlgExpr: MAX . LB AlgExpr COMMA AlgExpr RB

    LB  décalage et aller à l'état 99


État 59

  163 LhaFunc: LhaMIN . LB LinForm RB

    LB  décalage et aller à l'état 100


État 60

  164 LhaFunc: LhaMAX . LB LinForm RB

    LB  décalage et aller à l'état 101


État 61

  162 LhaFunc: LAST . LB LinForm RB

    LB  décalage et aller à l'état 102


État 62

  165 LhaFunc: INTEGRAL . LB LinForm RB

    LB  décalage et aller à l'état 103


État 63

  166 LhaFunc: MEAN . LB LinForm RB

    LB  décalage et aller à l'état 104


État 64

  138 TopHaslExp: AVG LB AlgExpr . RB
  157 AlgExpr: AlgExpr . POWER AlgExpr
  158        | AlgExpr . PLUS AlgExpr
  159        | AlgExpr . MINUS AlgExpr
  160        | AlgExpr . MUL AlgExpr
  161        | AlgExpr . DIV AlgExpr

    RB     décalage et aller à l'état 105
    DIV    décalage et aller à l'état 106
    MUL    décalage et aller à l'état 107
    PLUS   décalage et aller à l'état 108
    MINUS  décalage et aller à l'état 109
    POWER  décalage et aller à l'état 110


État 65

  151 AlgExpr: LhaFunc .

    $défaut  réduction par utilisation de la règle 151 (AlgExpr)


État 66

  143 TopHaslExp: VAR LB AlgExpr . RB
  157 AlgExpr: AlgExpr . POWER AlgExpr
  158        | AlgExpr . PLUS AlgExpr
  159        | AlgExpr . MINUS AlgExpr
  160        | AlgExpr . MUL AlgExpr
  161        | AlgExpr . DIV AlgExpr

    RB     décalage et aller à l'état 111
    DIV    décalage et aller à l'état 106
    MUL    décalage et aller à l'état 107
    PLUS   décalage et aller à l'état 108
    MINUS  décalage et aller à l'état 109
    POWER  décalage et aller à l'état 110


État 67

  140 TopHaslExp: SPRT LB rval . COMMA rval RB

    COMMA  décalage et aller à l'état 112


État 68

   55 NbLocations: NbLoc EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 113


État 69

   54 NbVariables: NbVar EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 114


État 70

  141 TopHaslExp: PDF LB AlgExpr . COMMA rorival COMMA rorival COMMA rorival RB
  157 AlgExpr: AlgExpr . POWER AlgExpr
  158        | AlgExpr . PLUS AlgExpr
  159        | AlgExpr . MINUS AlgExpr
  160        | AlgExpr . MUL AlgExpr
  161        | AlgExpr . DIV AlgExpr

    COMMA  décalage et aller à l'état 115
    DIV    décalage et aller à l'état 106
    MUL    décalage et aller à l'état 107
    PLUS   décalage et aller à l'état 108
    MINUS  décalage et aller à l'état 109
    POWER  décalage et aller à l'état 110


État 71

  142 TopHaslExp: CDF LB AlgExpr . COMMA rorival COMMA rorival COMMA rorival RB
  157 AlgExpr: AlgExpr . POWER AlgExpr
  158        | AlgExpr . PLUS AlgExpr
  159        | AlgExpr . MINUS AlgExpr
  160        | AlgExpr . MUL AlgExpr
  161        | AlgExpr . DIV AlgExpr
